# pokezero

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  report.md
.github/workflows/: neural-smoke.yml
checkpoints/: README.md  pokezero-gen3-1-5m.json  pokezero-gen3-1m.json  pokezero-gen3-500k.json  pokezero-no-belief-gen3-1-5m.json  pokezero-no-belief-gen3-1-5m.pt  pokezero-no-belief-gen3-1m.json  pokezero-no-belief-gen3-1m.pt  pokezero-no-belief-gen3-500k.json  pokezero-no-belief-gen3-500k.pt
docs/: alphastar_training_context.md  autonomous_task_loop.md  belief_edge_case_matrix.md  bootstrap_strategy.md  checkpoint_trait_tracking_findings.md  checkpoint_trait_tracking_plan.md  checkpoint_trait_tracking_report.html  checkpoint_trait_tracking_report_v3.html  collection_throughput_plan.md  coverage_enumeration_audit_plan.md  cpu_self_play_roadmap.md  crate_model_integration.md  crate_search_design.md  dead_observation_fields.md  deep_line_audit_plan.md  design_and_results.html  diversity_fingerprint_findings.md  diversity_fingerprint_plan.md  diversity_tier_design.md  embedding_efficiency.html  endgame_scenario_studio_plan.md  engine_fidelity_findings.md  engine_search_poc.md  eval_opponents.md  first_iteration_design.md  fold_closure_probe.md  foundation_1m_progress.md  foundation_500k_results.md  foundation_belief_1_5m_results.md  gen3_interaction_inventory.md  gen3_randbat_ability_audit.md  goal_cpu_past_simple_legal.md  goals.md  golden_corpus_notes.md  history_truncation_probe_plan.md  history_truncation_probe_results.md  human_predictor_plan.md  leaf_observation_column_map.md  learning_architecture_exploration.md  m0_eval_protocol.md  (+30 more)
docs/audit_artifacts/: coverage-enumeration-audit-754b71cfed643fa0.json  coverage-enumeration-ledger-754b71cfed643fa0.json  coverage-exact-variant-audit-754b71cfed643fa0.json  coverage-exact-variant-ledger-754b71cfed643fa0.json  v3-targeted-party-natural-cure-6b292aebdd66.json  v3signature-coverage-r2-summary.json  v3signature-silent-r2-summary.json  v6-core-terminal-cc1042b.json  v6-natural-cure-party-6b292ae.json
docs/token-format/: extract_turn16.py  generate_token_doc.py  token-format-v2_2.html  turn16-token-dump.json
evals/: README.md  turn10_choice_sample.json
runs/investment-gate-2026-07-04/: summary.json
runs/tier2-gate-2026-07-04/: summary-seed5150.json  summary-seed90210.json  summary.json
rust/pokezero-search/: Cargo.toml  README.md  build.rs  pyproject.toml
rust/pokezero-search/src/: encoder.rs  events.rs  fold.rs  leaf.rs  lib.rs  model.rs  tree.rs
rust/pokezero-search/src/test_fixtures/: analytic_toxic.state  depth_benefit.state  minimal.state  straddle.state
scenarios/endgame/: README.md  blaze-threshold-001.json  perish-trap-001.json  pp-endurance-001.json  priority-cleaner-001.json  recharge-commitment-001.json  recoil-preservation-001.json  recovery-denial-001.json  sacrifice-cleaner-001.json  salac-threshold-001.json  sleep-timing-001.json
scripts/: analyze_history_truncation_probe.py  attract_differential.py  battle_bridge.mjs  behavior_probe.py  bench_crate_search.py  bench_fold_advance.py  bench_inference.py  bench_leaf_search.py  bench_model_eval.py  bench_multiply_search.py  benchmark_foulplay_baselines.sh  benchmark_vs_foulplay.sh  build_search_crate_model.sh  checkpoint_factors.py  choice_sample.py  collapse_probe.py  compare_root_puct_vs_foulplay.py  convert_region_trim.py  coverage_enumeration_audit.py  deep_line_audit.py  diversity_coverage_rate.py  diversity_fingerprint_analyze.py  diversity_fingerprint_extract.py  diversity_matchup_analyze.py  diversity_population_dashboard.py  diversity_report.py  diversity_style_analyze.py  e1_value_readiness.sh  encode_foulplay_capture.py  encoding_collision_audit.py  export_encoder_tables.py  export_model.py  fidelity_gate_events.py  foulplay_choice_rank_probe.py  foulplay_mirror.sh  golden_encoder_backends.py  golden_fold_backends.py  hazard_blind_spot_audit.py  hazard_probe.py  hazard_trajectory.py  (+38 more)
src/pokezero/: __init__.py  actions.py  admission_guard.py  audit_provenance.py  behavior_metrics.py  belief.py  bootstrap.py  bootstrap_cli.py  capstone_analysis.py  capstone_artifacts.py  capstone_cli.py  category_vocab.py  dex.py  (+92 more)
tests/: test_actions.py  test_admission_guard.py  test_audit_provenance.py  test_batch_replay.py  test_belief.py  test_bench_model_eval.py  test_bootstrap.py  test_cache_concat.py  test_capstone_analysis.py  test_capstone_artifacts.py  test_category_vocab.py  test_cli_audit.py  test_collection.py  test_corpus_replay.py  test_coverage_enumeration_audit.py  test_cpu_smoke.py  test_crate_model_leafeval.py  test_dataset.py  test_deep_line_audit.py  test_determinization.py  test_dex.py  test_distributed_training.py  test_diversity_fingerprint.py  test_diversity_measurement.py  test_encoder_tables_layout.py  test_encoding_collision_audit.py  test_engine_attract_immobilization.py  test_engine_fidelity.py  test_engine_fidelity_multiturn.py  test_engine_gen3_abilities.py  test_engine_rapidspin_fidelity.py  test_engine_residual_order.py  test_engine_search.py  test_engine_struggle_typeless.py  test_engine_world.py  test_env.py  test_evaluation.py  test_explosion_fixture.py  test_export_model.py  test_feature_mask_consistency.py  (+91 more)
(+15 files in other folders)
