[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pokezero"
version = "0.1.0"
description = "Self-play training experiments for Pokemon Showdown random battles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=15.0.1,<16",
]

[project.scripts]
pokezero-linear = "pokezero.linear_cli:main"
pokezero-rollout = "pokezero.rollout_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
