[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pokezero"
version = "0.1.0"
description = "Self-play training experiments for Pokemon Showdown random battles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=15.0.1,<16",
]

[project.optional-dependencies]
neural = [
  "torch>=2.4,<3",
  "numpy>=1.26",
  "tensorboard>=2.14",
]

[project.scripts]
pokezero-linear = "pokezero.linear_cli:main"
pokezero-rollout = "pokezero.rollout_cli:main"
pokezero-selfplay = "pokezero.selfplay_cli:main"
pokezero-bootstrap = "pokezero.bootstrap_cli:main"
pokezero-eval = "pokezero.eval_cli:main"
pokezero-neural = "pokezero.neural_cli:main"
pokezero-replay-import = "pokezero.replay_import_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
