# pokezero-search: native PUCT search skeleton over the gen3-patched poke-engine.
#
# The `poke-engine` path dependency points at third_party/poke-engine-src/, which
# is fetched (never committed) by scripts/vendor_poke_engine_src.sh — run that
# first or this crate will not build. The sdist's workspace root IS the engine
# crate (src/gen3 lives there; poke-engine-py is a workspace member we ignore).
[package]
name = "pokezero-search"
version = "0.1.0"
edition = "2021"
description = "PokeZero native search crate: PUCT over poke-engine primitives with a pluggable leaf evaluator"
publish = false

[lib]
name = "pokezero_search"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26.0" }
rand = "0.9"
poke-engine = { path = "../../third_party/poke-engine-src", default-features = false, features = ["gen3"] }
# model feature (track D): in-crate TorchScript leaf evaluation via tch-rs.
# Pinned exactly — torch-sys 0.24.0 expects libtorch 2.11.0 and the shared
# venv ships torch 2.12.1, so builds run with LIBTORCH_USE_PYTORCH=1 +
# LIBTORCH_BYPASS_VERSION_CHECK=1 (see scripts/build_search_crate_model.sh);
# the parity gate (tests/test_crate_model_leafeval.py) is the real
# compatibility check, and a silent tch bump would invalidate it.
tch = { version = "=0.24.0", optional = true }
# encoder.rs (track B): tables/row-input JSON + the vocab OOV hash (blake2b-8).
# float_roundtrip is REQUIRED for bit-exactness: serde_json's default fast
# float path parses e.g. 0.09090909090909091 one ULP off the correctly-rounded
# double that Python's json.loads produces (caught by the golden corpus,
# NUMERIC_UNCERTAINTY column).
serde_json = { version = "1", features = ["float_roundtrip"] }
blake2 = "0.10"

[features]
default = []
# Enables TorchScriptLeafEval + batched model-in-the-loop search entrypoints.
# Requires a libtorch at build AND run time; the supported recipe links the
# shared venv's own torch (scripts/build_search_crate_model.sh).
model = ["dep:tch"]

# Standalone package: do not get absorbed into any enclosing workspace.
[workspace]

[profile.release]
lto = true
codegen-units = 1
